5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1602_2895.log
== SUBMITION (2019-03-20 19:00:27) 
-- CODE:
var = float(input("8"))
valorA = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.120852
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
830252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
830250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
830486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:35) 
-- CODE:
var = float(input("8"))
valor = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.197386
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:37) 
-- CODE:
var = float(input("8"))
valor = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.144042
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
830250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
830486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:45) 
-- CODE:
var = float(input(""))
valor = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.189933
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:10) 
-- CODE:
var = float(input("8"))
valor = float(input("30"))
total = 8*30+total
print(total)
-- EXECUTION TIME:
0.195477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    total = 8*30+total
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:51) 
-- CODE:
var = float(input("45"))
valor = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.214022
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:01:53) 
-- CODE:
var = float(input("45"))
valor = float(input("30"))
total = 8*30+var
print(total)
-- EXECUTION TIME:
0.161422
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:02:40) 
-- CODE:
var = float(input("45"))
valor = float(input("30"))
total = 8*valor+var
print(total)
-- EXECUTION TIME:
0.204054
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
372.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
546.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
8046.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:20) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.171051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:22) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.147675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:22) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.175772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:22) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.191522
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:22) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.311694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:23) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.100641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:23) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.104764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:23) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.24887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:23) 
-- CODE:
#var= total de jogos
var = float(input("B"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.153166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:36) 
-- CODE:
#var= total de jogos
var = float(input("5"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.176027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:39) 
-- CODE:
#var= total de jogos
var = float(input("5"))
#preco do jogo
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.137386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 6, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:55) 
-- CODE:
var = float(input("5"))
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.204373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:04) 
-- CODE:
var = float(input(5))
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.165717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:06) 
-- CODE:
var = float(input(5))
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.131008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:06) 
-- CODE:
var = float(input(5))
pr = 30
valor = 45*var+30
print(total)

-- EXECUTION TIME:
0.0987501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:15) 
-- CODE:
var = float(input(5))
pr = 30
valor = 45*var+30
print = (total)

-- EXECUTION TIME:
0.206266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print = (total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:16) 
-- CODE:
var = float(input(5))
pr = 30
valor = 45*var+30
print = (total)

-- EXECUTION TIME:
0.14032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print = (total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:27) 
-- CODE:
var = float(input(5))
valor = 45*var+30
print = (total)

-- EXECUTION TIME:
0.136839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    print = (total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:13:30) 
-- CODE:
var = float(input(8))
varb = (30)
frete = (b)
total = (var*varb+b)
print(total)

-- EXECUTION TIME:
0.183284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    frete = (b)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:13:45) 
-- CODE:
var = float(input(8))
varb = (30)
frete = (b)
total = (var*varb+b)
print ("total)

-- EXECUTION TIME:
0.153743
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 5
    print ("total)
                 ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:13:48) 
-- CODE:
var = float(input(8))
varb = (30)
frete = (b)
total = (var*varb+b)
print ("total")

-- EXECUTION TIME:
0.148847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    frete = (b)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:24) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
jg = 8
pr = 30
total = 30*8+var
print (total)
-- EXECUTION TIME:
0.114793
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:52) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
jg = 8
pr = 30
total = (30*8+var()
print (total)
-- EXECUTION TIME:
0.188723
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 8
    print (total)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:19:58) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
jg = 8
pr = 30
total = (30*8+var
print (total)
-- EXECUTION TIME:
0.192853
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 8
    print (total)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:51) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.227214
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:52) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.138722
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
252.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
252.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:52) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.196948
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
250.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
252.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
250.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:52) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.209158
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
250.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
486.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:52) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.370303
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
486.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:20:53) 
-- CODE:
#jogos variados
#preço dos jogos
#valor do frete
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.440976
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:08) 
-- CODE:
var = (input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.171098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total = x*y+var
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:13) 
-- CODE:
var = int(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.221297
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:25) 
-- CODE:
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.201028
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:26) 
-- CODE:
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.167952
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
252.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
250.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:27) 
-- CODE:
var = float(input("frete"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.19114
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:43) 
-- CODE:
var = float(input("45"))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.114829
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:51) 
-- CODE:
var = float(input(45))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.140763
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:21:53) 
-- CODE:
var = float(input(45))
x = 8
y = 30
total = x*y+var
print (total)
-- EXECUTION TIME:
0.173416
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:12) 
-- CODE:
var = float(input(45))
x = 8
y = 30
total = 8*30+var
print (total)
-- EXECUTION TIME:
0.168649
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
45252.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
45250.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
45486.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:27:35) 
-- CODE:
var = int(input("quantidades de jogos"))
a = float(input("valor dos jogos"))
b = int(input("frete"))
total = (var*a)+b
print (total)
-- EXECUTION TIME:
0.215919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    b = int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:28:22) 
-- CODE:
var = int(input("quantidades de jogos"))
a = float(input("valor dos jogos"))
b = float(input("frete"))
total = (var*a)+b
print (total)
-- EXECUTION TIME:
0.172715
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
